@@ -51,14 +51,12 @@ $sql = "SELECT bin::bytea FROM ".$table_name." WHERE num = -9999";
 $result = pg_query($db, $sql);
 $row = pg_fetch_array($result, 0, PGSQL_ASSOC);
 
-// Compare
-// Need to wait PostgreSQL 7.3.x for PQunescapeBytea()
-// if ($data === pg_unescape_bytea($row['bin'])) {
-// 	echo "pg_escape_bytea() actually works with databse\n";
-// }
-// else {
-// 	echo "pg_escape_bytea() is broken\n";
-// }
+if ($data === pg_unescape_bytea($row['bin'])) {
+	echo "pg_escape_bytea() actually works with database\n";
+}
+else {
+	echo "pg_escape_bytea() is broken\n";
+}
 
 ?>
 --EXPECT--
@@ -67,3 +65,4 @@ string(9) "ABC\ABC\'"
 string(12) "ABC\\ABC\\''"
 string(10) "ABC\\ABC\'"
 pg_escape_bytea() is Ok
+pg_escape_bytea() actually works with database
